--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <link rel="canonical" href="http://clive.io">
 <meta http-equiv="refresh" content="0;URL='http://clive.io/'" />
 <script>if (window.location.href.indexOf('http://mathnerd3141.github.io') === 0) {
-  window.location.href = 'http://clive.io{{ page.url }}';
+  window.location.href = 'http://clive.io';
 }</script>
