cchan.github.io now

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--http://stackoverflow.com/questions/9276817/301-redirect-for-site-hosted-at-github-->
 <link rel="canonical" href="http://clive.io">
 <meta http-equiv="refresh" content="0;URL='http://clive.io/'" />
-<script>if (window.location.href.indexOf('http://mathnerd3141.github.io') === 0) {
+<script>if (window.location.href.indexOf('http://cchan.github.io') === 0) {
   window.location.href = 'http://clive.io';
 }</script>
