changed to window.location.replace

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--http://stackoverflow.com/questions/9276817/301-redirect-for-site-hosted-at-github-->
 <link rel="canonical" href="http://clive.io">
 <meta http-equiv="refresh" content="0;URL='http://clive.io/'" />
-<script>if (window.location.href.indexOf('http://cchan.github.io') === 0) {
-  window.location.href = 'http://clive.io';
-}</script>
+<script>if (window.location.href.indexOf('http://cchan.github.io') === 0){
+window.location.replace('http://clive.io');}</script>
